logica di stampa lista

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Lista cognomi</title>
   </head>
   <body>
+    <h1 id="surname-list"></h1>
 
-    
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
