--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lista cognomi</title>
   </head>
   <body>
-    <h1 id="surname-list"></h1>
+    <ul id="surname-list"></ul>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
