print posizione cognome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ul id="surname-list"></ul>
-
+    <h1 id="list-position"></h1>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
