stile esercizio cognomi

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista cognomi</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <ul id="surname-list"></ul>
-    <h1 id="list-position"></h1>
-    <script type="text/javascript" src="main.js"></script>
+    <div class="container">
+      <ul id="surname-list"></ul>
+      <div id="list-position">
+      </div>
+    </div>
+
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
